[package]
name = "mio"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { workspace = true }
bevy-inspector-egui = { workspace = true }
bevy_asset_loader = { workspace = true }
bevy_egui = { workspace = true }
bevy_obj = { workspace = true }
color-eyre = { workspace = true }
communication = { workspace = true }
egui_dock = { workspace = true }
nalgebra = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
types = { workspace = true }
urdf-rs = { workspace = true }
